PPL/assignment_2/initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from /Users/macbook/Desktop/NLNNLT/assignment_2/initial/src/main/mc/parser/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'int'", "'float'", "'string'", 
                     "'void'", "'if'", "'else'", "'for'", "'do'", "'while'", 
                     "'break'", "'continue'", "'return'", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'!'", "'||'", 
                     "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "INT", "FLOAT", "STRING", 
                      "VOID", "IF", "ELSE", "FOR", "DO", "WHILE", "BREAK", 
                      "CONTINUE", "RETURN", "INTLIT", "BOOLEANLIT", "TRUE", 
                      "FALSE", "FLOATLIT", "STRINGLIT", "ID", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "SEMI", "CM", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "ASSIGN", "NOT", "OR", "AND", 
                      "EQUAL", "NOT_EQUAL", "LESS", "LESS_OR_EQUAL", "GREATER", 
                      "GREATER_OR_EQUAL", "WS", "COMMENT_BLOCK", "COMMENT_LINE", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_tail = 2
    RULE_decl = 3
    RULE_vardecl = 4
    RULE_idlist = 5
    RULE_idlisttail = 6
    RULE_varid = 7
    RULE_funcdecl = 8
    RULE_paramdecl = 9
    RULE_listparams = 10
    RULE_listparamstail = 11
    RULE_oneparam = 12
    RULE_body = 13
    RULE_bodylist = 14
    RULE_bodytail = 15
    RULE_onebody = 16
    RULE_stmt = 17
    RULE_ifStmt = 18
    RULE_matchIf = 19
    RULE_match_stmt = 20
    RULE_unmatchIf = 21
    RULE_unmatch_stmt = 22
    RULE_other_stmt = 23
    RULE_forStmt = 24
    RULE_doWhileStmt = 25
    RULE_breakStmt = 26
    RULE_continueStmt = 27
    RULE_returnStmt = 28
    RULE_expStmt = 29
    RULE_exp = 30
    RULE_term1 = 31
    RULE_term2 = 32
    RULE_term3 = 33
    RULE_term4 = 34
    RULE_term5 = 35
    RULE_term6 = 36
    RULE_term7 = 37
    RULE_term8 = 38
    RULE_term9 = 39
    RULE_indexExp = 40
    RULE_indexFirstExp = 41
    RULE_funcCall = 42
    RULE_explist = 43
    RULE_explisttail = 44
    RULE_pritype = 45
    RULE_functionType = 46
    RULE_array_pointer_type = 47

    ruleNames =  [ "program", "manydecls", "tail", "decl", "vardecl", "idlist", 
                   "idlisttail", "varid", "funcdecl", "paramdecl", "listparams", 
                   "listparamstail", "oneparam", "body", "bodylist", "bodytail", 
                   "onebody", "stmt", "ifStmt", "matchIf", "match_stmt", 
                   "unmatchIf", "unmatch_stmt", "other_stmt", "forStmt", 
                   "doWhileStmt", "breakStmt", "continueStmt", "returnStmt", 
                   "expStmt", "exp", "term1", "term2", "term3", "term4", 
                   "term5", "term6", "term7", "term8", "term9", "indexExp", 
                   "indexFirstExp", "funcCall", "explist", "explisttail", 
                   "pritype", "functionType", "array_pointer_type" ]

    EOF = Token.EOF
    BOOLEAN=1
    INT=2
    FLOAT=3
    STRING=4
    VOID=5
    IF=6
    ELSE=7
    FOR=8
    DO=9
    WHILE=10
    BREAK=11
    CONTINUE=12
    RETURN=13
    INTLIT=14
    BOOLEANLIT=15
    TRUE=16
    FALSE=17
    FLOATLIT=18
    STRINGLIT=19
    ID=20
    LB=21
    RB=22
    LP=23
    RP=24
    LSB=25
    RSB=26
    SEMI=27
    CM=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32
    MOD=33
    ASSIGN=34
    NOT=35
    OR=36
    AND=37
    EQUAL=38
    NOT_EQUAL=39
    LESS=40
    LESS_OR_EQUAL=41
    GREATER=42
    GREATER_OR_EQUAL=43
    WS=44
    COMMENT_BLOCK=45
    COMMENT_LINE=46
    ERROR_CHAR=47
    UNCLOSE_STRING=48
    ILLEGAL_ESCAPE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.manydecls()
            self.state = 97
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def tail(self):
            return self.getTypedRuleContext(MCParser.TailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.decl()
            self.state = 100
            self.tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def tail(self):
            return self.getTypedRuleContext(MCParser.TailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_tail




    def tail(self):

        localctx = MCParser.TailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tail)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.INT, MCParser.FLOAT, MCParser.STRING, MCParser.VOID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.decl()
                self.state = 103
                self.tail()
                pass
            elif token in [MCParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MCParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pritype(self):
            return self.getTypedRuleContext(MCParser.PritypeContext,0)


        def idlist(self):
            return self.getTypedRuleContext(MCParser.IdlistContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_vardecl




    def vardecl(self):

        localctx = MCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.pritype()
            self.state = 113
            self.idlist()
            self.state = 114
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varid(self):
            return self.getTypedRuleContext(MCParser.VaridContext,0)


        def idlisttail(self):
            return self.getTypedRuleContext(MCParser.IdlisttailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_idlist




    def idlist(self):

        localctx = MCParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.varid()
            self.state = 117
            self.idlisttail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlisttailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def varid(self):
            return self.getTypedRuleContext(MCParser.VaridContext,0)


        def idlisttail(self):
            return self.getTypedRuleContext(MCParser.IdlisttailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_idlisttail




    def idlisttail(self):

        localctx = MCParser.IdlisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idlisttail)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(MCParser.CM)
                self.state = 120
                self.varid()
                self.state = 121
                self.idlisttail()
                pass
            elif token in [MCParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VaridContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varid




    def varid(self):

        localctx = MCParser.VaridContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varid)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(MCParser.ID)
                self.state = 128
                self.match(MCParser.LSB)
                self.state = 129
                self.match(MCParser.INTLIT)
                self.state = 130
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionType(self):
            return self.getTypedRuleContext(MCParser.FunctionTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def paramdecl(self):
            return self.getTypedRuleContext(MCParser.ParamdeclContext,0)


        def body(self):
            return self.getTypedRuleContext(MCParser.BodyContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcdecl




    def funcdecl(self):

        localctx = MCParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.functionType()
            self.state = 134
            self.match(MCParser.ID)
            self.state = 135
            self.paramdecl()
            self.state = 136
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def listparams(self):
            return self.getTypedRuleContext(MCParser.ListparamsContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_paramdecl




    def paramdecl(self):

        localctx = MCParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MCParser.LB)
            self.state = 139
            self.listparams()
            self.state = 140
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListparamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oneparam(self):
            return self.getTypedRuleContext(MCParser.OneparamContext,0)


        def listparamstail(self):
            return self.getTypedRuleContext(MCParser.ListparamstailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_listparams




    def listparams(self):

        localctx = MCParser.ListparamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listparams)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.INT, MCParser.FLOAT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.oneparam()
                self.state = 143
                self.listparamstail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListparamstailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def oneparam(self):
            return self.getTypedRuleContext(MCParser.OneparamContext,0)


        def listparamstail(self):
            return self.getTypedRuleContext(MCParser.ListparamstailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_listparamstail




    def listparamstail(self):

        localctx = MCParser.ListparamstailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listparamstail)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MCParser.CM)
                self.state = 149
                self.oneparam()
                self.state = 150
                self.listparamstail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OneparamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pritype(self):
            return self.getTypedRuleContext(MCParser.PritypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_oneparam




    def oneparam(self):

        localctx = MCParser.OneparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_oneparam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.pritype()
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 156
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 157
                self.match(MCParser.ID)
                self.state = 158
                self.match(MCParser.LSB)
                self.state = 159
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def bodylist(self):
            return self.getTypedRuleContext(MCParser.BodylistContext,0)


        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def getRuleIndex(self):
            return MCParser.RULE_body




    def body(self):

        localctx = MCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MCParser.LP)
            self.state = 163
            self.bodylist()
            self.state = 164
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodylistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def onebody(self):
            return self.getTypedRuleContext(MCParser.OnebodyContext,0)


        def bodytail(self):
            return self.getTypedRuleContext(MCParser.BodytailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_bodylist




    def bodylist(self):

        localctx = MCParser.BodylistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bodylist)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.INT, MCParser.FLOAT, MCParser.STRING, MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.ID, MCParser.LB, MCParser.LP, MCParser.SUB, MCParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.onebody()
                self.state = 167
                self.bodytail()
                pass
            elif token in [MCParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodytailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def onebody(self):
            return self.getTypedRuleContext(MCParser.OnebodyContext,0)


        def bodytail(self):
            return self.getTypedRuleContext(MCParser.BodytailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_bodytail




    def bodytail(self):

        localctx = MCParser.BodytailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_bodytail)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.INT, MCParser.FLOAT, MCParser.STRING, MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.ID, MCParser.LB, MCParser.LP, MCParser.SUB, MCParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.onebody()
                self.state = 173
                self.bodytail()
                pass
            elif token in [MCParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OnebodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_onebody




    def onebody(self):

        localctx = MCParser.OnebodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_onebody)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.INT, MCParser.FLOAT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.vardecl()
                pass
            elif token in [MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.ID, MCParser.LB, MCParser.LP, MCParser.SUB, MCParser.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(MCParser.IfStmtContext,0)


        def other_stmt(self):
            return self.getTypedRuleContext(MCParser.Other_stmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_stmt




    def stmt(self):

        localctx = MCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_stmt)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.ifStmt()
                pass
            elif token in [MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.ID, MCParser.LB, MCParser.LP, MCParser.SUB, MCParser.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.other_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matchIf(self):
            return self.getTypedRuleContext(MCParser.MatchIfContext,0)

